# xsynth

./: .gitignore  Cargo.toml  README.md  diff_output.txt
.cargo/: config.toml
clib/src/: group.rs  handles.rs  lib.rs  realtime.rs  soundfont.rs  utils.rs
core/: Cargo.toml
core/benches/: diag.rs
core/examples/: sf2_analyze.rs  sf2_load_test.rs
core/src/: audio_pipe.rs  audio_stream.rs  buffered_renderer.rs  helpers.rs  voice.rs
core/src/channel/: channel_sf.rs  control.rs  event.rs  key.rs  mod.rs  voice_buffer.rs  voice_spawner.rs
core/src/channel_group/: config.rs  mod.rs
core/src/effects/: filter.rs  limiter.rs
core/src/helpers/: simd.rs
core/src/soundfont/: config.rs  mod.rs
core/src/soundfont/voice_spawners/: mono.rs  stereo.rs
core/src/voice/: base.rs  channels.rs  constant.rs  control.rs  cutoff.rs  envelopes.rs  sampler.rs  simd.rs  simdvoice.rs  squarewave.rs
core/src/voice/envelopes/: lerpers.rs
core/src/voice/sampler/: linear.rs
kdmapi/src/: lib.rs  parsers.rs
kdmapi/src/parsers/: settings.rs
realtime/: Cargo.toml  README.md
realtime/examples/: bench.rs  midi.rs
realtime/src/: config.rs  event_senders.rs  lib.rs  realtime_synth.rs  util.rs
realtime/src/event_senders/: mod.rs  nps.rs  sender.rs
render/: Cargo.toml  README.md
render/src/: config.rs  lib.rs  main.rs  offline.rs
scripts/: setup-pipewire.sh
soundfonts/: Cargo.toml
soundfonts/src/: resample.rs
soundfonts/src/sf2/: instrument.rs  mod.rs  modulator.rs  preset.rs  sample.rs  zone.rs
soundfonts/src/sfz/: mod.rs  parse.rs  region.rs
soundfonts/src/sfz/grammar/: mod.rs
soundfonts/src/sfz/parse/: defines.rs  resolver.rs
