[package]
name = "xsynth-render"
description = "Offline MIDI-to-WAV rendering support and CLI for XSynth."
authors = ["Arduano", "MBMS"]
readme = "README.md"
publish = false
default-run = "xsynth-render"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "xsynth-render"
path = "src/main.rs"

[dependencies]
xsynth-core = { workspace = true }
crossbeam-channel = "0.5.13"
hound = "3.5.1"
midi-toolkit-rs = "0.3.1"
atomic_float = "1.1.0"
thiserror = "2.0.18.0.63"
clap = { version = "4.6.4.6.1", features = ["cargo"] }
